# egograph

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
backend/: README.md  main.py  (+2 more)
egograph/backend/: .env.example  README.md  __init__.py  config.py  dependencies.py  main.py  mcp_server.py  pyproject.toml  validators.py
egograph/backend/api/: __init__.py  browser_history.py  browser_history_data.py  chat.py  data.py  github.py  health.py  system_prompts.py  threads.py  youtube.py
egograph/backend/api/schemas/: __init__.py  browser_history.py  chat.py  data.py  models.py  system_prompt.py  thread.py
egograph/backend/dev_tools/: __init__.py  chat_cli.py
egograph/backend/docs/performance/: future_optimizations.md
egograph/backend/domain/: __init__.py
egograph/backend/domain/models/: __init__.py  chat.py  llm.py  llm_model.py  thread.py  tool.py
egograph/backend/domain/tools/: __init__.py  data_query.py
egograph/backend/infrastructure/: __init__.py  context_files.py
egograph/backend/infrastructure/database/: browser_history_queries.py  connection.py  github_queries.py  queries.py  youtube_queries.py
egograph/backend/infrastructure/llm/: __init__.py  client.py
egograph/backend/scripts/: migrate_duckdb_to_sqlite.py  verify_spotify_parquet.py  verify_youtube_parquet.py
egograph/backend/tests/: __init__.py  conftest.py  test_mcp_server.py
egograph/backend/usecases/: __init__.py
egograph/ingest/: README.md  __init__.py  bootstrap_compact.py  compaction.py  config.py  pyproject.toml  utils.py
egograph/ingest/browser_history/: compact.py  compaction.py  schema.py  storage.py  transform.py
egograph/ingest/github/: __init__.py  collector.py  compact.py  config.py  main.py  pipeline.py  storage.py  transform.py
egograph/ingest/google_activity/: __init__.py  collector.py  config.py  main.py  pipeline.py  schema.py  storage.py  transform.py  youtube_api.py
egograph/ingest/spotify/: __init__.py  collector.py  compact.py  config.py  main.py  pipeline.py  schema.py  transform.py  writer.py
egograph/ingest/tests/: __init__.py  conftest.py
(+476 files in other folders)
