[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "egograph-backend"
version = "0.1.0"
description = "Backend API for EgoGraph (LLM Agent + Direct Data Access)"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.21",

    # Database
    "duckdb>=1.1.0",

    # Data processing
    "pandas>=2.0.0",
    "tabulate>=0.9.0",

    # HTTP client (for LLM APIs)
    "httpx>=0.28.0",

    # Configuration & validation
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.hatch.build]
dev-mode-dirs = [".."]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.12.0",  # Mockingヘルパー
    "httpx>=0.28.0",  # For TestClient
    "rich>=13.7.0",  # CLIツール用のリッチな表示
    "prompt-toolkit>=3.0.0",  # 高度な入力機能（矢印キー、履歴など）
]
